--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <div class="page">
+      Probando
       <header class="page__header">
         <!-- Contenido header -->
       </header>
