--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="index" href="/vendor/normalize.css" />
+    <link rel="index" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="/pages/index.css" />
-    <link rel="index" href="/index.html" />
+    <link rel="index" href="./index.html" />
   </head>
   <body>
     <div class="page">
