--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <body>
     <div class="page">
       Probando
-      <header class="page__header">
+      <header class="header">
         <!-- Contenido header -->
       </header>
-      <main class="page__main">
+      <main class="content">
         <!-- Contenido principal -->
       </main>
-      <footer class="page__footer">
+      <footer class="footer">
         <!-- Contenido del pie de página -->
       </footer>
     </div>
