--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       </header>
       <main class="content">
         <!-- Contenido principal -->
+        <section class="reservation"></section>
       </main>
+
       <footer class="footer">
         <!-- Contenido del pie de página -->
       </footer>
