se agrego el section

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <header class="header">
         <!-- Contenido header -->
       </header>
-      <main class="content">
-        <!-- Contenido principal -->
+      <main>
+        <section class="content"></section>
+        <section class="reservation"></section>
       </main>
-      <section class="reservation"></section>
       <footer class="footer">
         <!-- Contenido del pie de página -->
       </footer>
