--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <header class="header">
         <!-- Contenido header -->
       </header>
-      <main>
-        <section class="content"></section>
+      <main class="content">
+        <section class="recipes"></section>
         <section class="reservation"></section>
       </main>
       <footer class="footer">
